--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
 
       <div class="container content">
         {{ content }}
+        {% include advertisements.html %}
         {% include comments.html %}
       </div>
     </div>
